POWR-795 save initial work to switch back to POWR-730

--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -44,63 +44,65 @@ permissions:
   29: 'view unpublished group_node:guide entity'
   30: 'create group_node:guide content'
   31: 'view group_node:guide content'
-  36: 'view group_node:information entity'
-  39: 'view group_node:information content'
-  40: 'delete any group_node:event entity'
-  41: 'delete own group_node:event entity'
-  42: 'update any group_node:event entity'
-  43: 'update own group_node:event entity'
-  44: 'view group_node:event entity'
-  45: 'view unpublished group_node:event entity'
-  46: 'create group_node:event content'
-  47: 'view group_node:event content'
-  48: 'create group_media:document entity'
-  49: 'delete any group_media:document entity'
-  50: 'delete own group_media:document entity'
-  51: 'update any group_media:document entity'
-  52: 'update own group_media:document entity'
-  53: 'view group_media:document entity'
-  54: 'view unpublished group_media:document entity'
-  55: 'create group_media:document content'
-  56: 'view group_media:document content'
-  57: 'create group_media:image entity'
-  58: 'delete any group_media:image entity'
-  59: 'delete own group_media:image entity'
-  60: 'update any group_media:image entity'
-  61: 'update own group_media:image entity'
-  62: 'view group_media:image entity'
-  63: 'view unpublished group_media:image entity'
-  64: 'create group_media:image content'
-  65: 'view group_media:image content'
-  66: 'create group_media:video entity'
-  67: 'delete any group_media:video entity'
-  68: 'delete own group_media:video entity'
-  69: 'update any group_media:video entity'
-  70: 'update own group_media:video entity'
-  71: 'view group_media:video entity'
-  72: 'view unpublished group_media:video entity'
-  73: 'create group_media:video content'
-  74: 'view group_media:video content'
-  75: 'access group_media overview'
-  76: 'create group_node:notification entity'
-  77: 'delete any group_node:notification entity'
-  78: 'delete own group_node:notification entity'
-  79: 'update any group_node:notification entity'
-  80: 'update own group_node:notification entity'
-  81: 'view group_node:notification entity'
-  82: 'view unpublished group_node:notification entity'
-  83: 'create group_node:notification content'
-  84: 'view group_node:notification content'
-  85: 'create group_media:audio entity'
-  86: 'delete any group_media:audio entity'
-  87: 'delete own group_media:audio entity'
-  88: 'update any group_media:audio entity'
-  89: 'update own group_media:audio entity'
-  90: 'view group_media:audio entity'
-  91: 'view unpublished group_media:audio entity'
-  92: 'create group_media:audio content'
-  171: 'create group_node:page entity'
-  172: 'delete any group_node:page entity'
-  173: 'view group_node:page entity'
-  174: 'view unpublished group_node:page entity'
-  175: 'create group_node:page content'
+  32: 'view group_node:information entity'
+  33: 'view group_node:information content'
+  34: 'delete any group_node:event entity'
+  35: 'delete own group_node:event entity'
+  36: 'update any group_node:event entity'
+  37: 'update own group_node:event entity'
+  38: 'view group_node:event entity'
+  39: 'view unpublished group_node:event entity'
+  40: 'create group_node:event content'
+  41: 'view group_node:event content'
+  42: 'create group_media:document entity'
+  43: 'delete any group_media:document entity'
+  44: 'delete own group_media:document entity'
+  45: 'update any group_media:document entity'
+  46: 'update own group_media:document entity'
+  47: 'view group_media:document entity'
+  48: 'view unpublished group_media:document entity'
+  49: 'create group_media:document content'
+  50: 'view group_media:document content'
+  51: 'create group_media:image entity'
+  52: 'delete any group_media:image entity'
+  53: 'delete own group_media:image entity'
+  54: 'update any group_media:image entity'
+  55: 'update own group_media:image entity'
+  56: 'view group_media:image entity'
+  57: 'view unpublished group_media:image entity'
+  58: 'create group_media:image content'
+  59: 'view group_media:image content'
+  60: 'create group_media:video entity'
+  61: 'delete any group_media:video entity'
+  62: 'delete own group_media:video entity'
+  63: 'update any group_media:video entity'
+  64: 'update own group_media:video entity'
+  65: 'view group_media:video entity'
+  66: 'view unpublished group_media:video entity'
+  67: 'create group_media:video content'
+  68: 'view group_media:video content'
+  69: 'access group_media overview'
+  70: 'create group_node:notification entity'
+  71: 'delete any group_node:notification entity'
+  72: 'delete own group_node:notification entity'
+  73: 'update any group_node:notification entity'
+  74: 'update own group_node:notification entity'
+  75: 'view group_node:notification entity'
+  76: 'view unpublished group_node:notification entity'
+  77: 'create group_node:notification content'
+  78: 'view group_node:notification content'
+  79: 'create group_media:audio entity'
+  80: 'delete any group_media:audio entity'
+  81: 'delete own group_media:audio entity'
+  82: 'update any group_media:audio entity'
+  83: 'update own group_media:audio entity'
+  84: 'view group_media:audio entity'
+  85: 'view unpublished group_media:audio entity'
+  86: 'create group_media:audio content'
+  87: 'create group_node:page entity'
+  88: 'delete any group_node:page entity'
+  89: 'view group_node:page entity'
+  90: 'view unpublished group_node:page entity'
+  91: 'create group_node:page content'
+  135: 'create group_node:event entity'
+  154: 'create group_node:news entity'
