--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -31,46 +31,48 @@ permissions:
   16: 'update own group_node:guide entity'
   17: 'view group_node:guide entity'
   18: 'view unpublished group_node:guide entity'
-  22: 'view group_node:information entity'
-  24: 'delete own group_node:event entity'
-  25: 'update any group_node:event entity'
-  26: 'update own group_node:event entity'
-  27: 'view group_node:event entity'
-  28: 'view unpublished group_node:event entity'
-  29: 'create group_media:document entity'
-  30: 'delete own group_media:document entity'
-  31: 'update any group_media:document entity'
-  32: 'update own group_media:document entity'
-  33: 'view group_media:document entity'
-  34: 'view unpublished group_media:document entity'
-  35: 'create group_media:image entity'
-  36: 'delete own group_media:image entity'
-  37: 'update any group_media:image entity'
-  38: 'update own group_media:image entity'
-  39: 'view group_media:image entity'
-  40: 'view unpublished group_media:image entity'
-  41: 'create group_media:video entity'
-  42: 'delete own group_media:video entity'
-  43: 'update any group_media:video entity'
-  44: 'update own group_media:video entity'
-  45: 'view group_media:video entity'
-  46: 'view unpublished group_media:video entity'
-  47: 'access group_media overview'
-  48: 'create group_node:notification entity'
-  49: 'delete own group_node:notification entity'
-  50: 'update any group_node:notification entity'
-  51: 'update own group_node:notification entity'
-  52: 'view group_node:notification entity'
-  53: 'view unpublished group_node:notification entity'
-  54: 'create group_media:audio entity'
-  55: 'delete own group_media:audio entity'
-  56: 'update any group_media:audio entity'
-  57: 'update own group_media:audio entity'
-  58: 'view group_media:audio entity'
-  59: 'view unpublished group_media:audio entity'
-  110: 'create group_node:page entity'
-  111: 'delete own group_node:page entity'
-  112: 'update any group_node:page entity'
-  113: 'update own group_node:page entity'
-  114: 'view group_node:page entity'
-  115: 'view unpublished group_node:page entity'
+  19: 'view group_node:information entity'
+  20: 'delete own group_node:event entity'
+  21: 'update any group_node:event entity'
+  22: 'update own group_node:event entity'
+  23: 'view group_node:event entity'
+  24: 'view unpublished group_node:event entity'
+  25: 'create group_media:document entity'
+  26: 'delete own group_media:document entity'
+  27: 'update any group_media:document entity'
+  28: 'update own group_media:document entity'
+  29: 'view group_media:document entity'
+  30: 'view unpublished group_media:document entity'
+  31: 'create group_media:image entity'
+  32: 'delete own group_media:image entity'
+  33: 'update any group_media:image entity'
+  34: 'update own group_media:image entity'
+  35: 'view group_media:image entity'
+  36: 'view unpublished group_media:image entity'
+  37: 'create group_media:video entity'
+  38: 'delete own group_media:video entity'
+  39: 'update any group_media:video entity'
+  40: 'update own group_media:video entity'
+  41: 'view group_media:video entity'
+  42: 'view unpublished group_media:video entity'
+  43: 'access group_media overview'
+  44: 'create group_node:notification entity'
+  45: 'delete own group_node:notification entity'
+  46: 'update any group_node:notification entity'
+  47: 'update own group_node:notification entity'
+  48: 'view group_node:notification entity'
+  49: 'view unpublished group_node:notification entity'
+  50: 'create group_media:audio entity'
+  51: 'delete own group_media:audio entity'
+  52: 'update any group_media:audio entity'
+  53: 'update own group_media:audio entity'
+  54: 'view group_media:audio entity'
+  55: 'view unpublished group_media:audio entity'
+  56: 'create group_node:page entity'
+  57: 'delete own group_node:page entity'
+  58: 'update any group_node:page entity'
+  59: 'update own group_node:page entity'
+  60: 'view group_node:page entity'
+  61: 'view unpublished group_node:page entity'
+  90: 'create group_node:event entity'
+  102: 'create group_node:news entity'
