--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -27,67 +27,69 @@ permissions:
   12: 'view unpublished group_node:news entity'
   13: 'create group_node:news content'
   14: 'view group_node:news content'
-  19: 'view group_node:guide entity'
-  27: 'view group_node:information entity'
-  31: 'delete any group_node:event entity'
-  32: 'delete own group_node:event entity'
-  33: 'update any group_node:event entity'
-  34: 'update own group_node:event entity'
-  35: 'view group_node:event entity'
-  36: 'view unpublished group_node:event entity'
-  37: 'create group_node:event content'
-  38: 'view group_node:event content'
-  39: 'create group_node:notification entity'
-  40: 'delete any group_node:notification entity'
-  41: 'delete own group_node:notification entity'
-  42: 'update any group_node:notification entity'
-  43: 'update own group_node:notification entity'
-  44: 'view group_node:notification entity'
-  45: 'view unpublished group_node:notification entity'
-  46: 'create group_node:notification content'
-  47: 'view group_node:notification content'
-  48: 'access group_media overview'
-  49: 'create group_media:audio entity'
-  50: 'delete any group_media:audio entity'
-  51: 'delete own group_media:audio entity'
-  52: 'update any group_media:audio entity'
-  53: 'update own group_media:audio entity'
-  54: 'view group_media:audio entity'
-  55: 'view unpublished group_media:audio entity'
-  56: 'create group_media:audio content'
-  57: 'create group_media:document entity'
-  58: 'delete any group_media:document entity'
-  59: 'delete own group_media:document entity'
-  60: 'update any group_media:document entity'
-  61: 'update own group_media:document entity'
-  62: 'view group_media:document entity'
-  63: 'view unpublished group_media:document entity'
-  64: 'create group_media:document content'
-  65: 'view group_media:document content'
-  66: 'create group_media:image entity'
-  67: 'delete any group_media:image entity'
-  68: 'delete own group_media:image entity'
-  69: 'update any group_media:image entity'
-  70: 'update own group_media:image entity'
-  71: 'view group_media:image entity'
-  72: 'view unpublished group_media:image entity'
-  73: 'create group_media:image content'
-  74: 'view group_media:image content'
-  75: 'create group_media:video entity'
-  76: 'delete any group_media:video entity'
-  77: 'delete own group_media:video entity'
-  78: 'update any group_media:video entity'
-  79: 'update own group_media:video entity'
-  80: 'view group_media:video entity'
-  81: 'view unpublished group_media:video entity'
-  82: 'create group_media:video content'
-  83: 'view group_media:video content'
-  154: 'create group_node:page entity'
-  155: 'delete any group_node:page entity'
-  156: 'delete own group_node:page entity'
-  157: 'update any group_node:page entity'
-  158: 'update own group_node:page entity'
-  159: 'view group_node:page entity'
-  160: 'view unpublished group_node:page entity'
-  161: 'create group_node:page content'
-  162: 'view group_node:page content'
+  15: 'view group_node:guide entity'
+  16: 'view group_node:information entity'
+  17: 'delete any group_node:event entity'
+  18: 'delete own group_node:event entity'
+  19: 'update any group_node:event entity'
+  20: 'update own group_node:event entity'
+  21: 'view group_node:event entity'
+  22: 'view unpublished group_node:event entity'
+  23: 'create group_node:event content'
+  24: 'view group_node:event content'
+  25: 'create group_node:notification entity'
+  26: 'delete any group_node:notification entity'
+  27: 'delete own group_node:notification entity'
+  28: 'update any group_node:notification entity'
+  29: 'update own group_node:notification entity'
+  30: 'view group_node:notification entity'
+  31: 'view unpublished group_node:notification entity'
+  32: 'create group_node:notification content'
+  33: 'view group_node:notification content'
+  34: 'access group_media overview'
+  35: 'create group_media:audio entity'
+  36: 'delete any group_media:audio entity'
+  37: 'delete own group_media:audio entity'
+  38: 'update any group_media:audio entity'
+  39: 'update own group_media:audio entity'
+  40: 'view group_media:audio entity'
+  41: 'view unpublished group_media:audio entity'
+  42: 'create group_media:audio content'
+  43: 'create group_media:document entity'
+  44: 'delete any group_media:document entity'
+  45: 'delete own group_media:document entity'
+  46: 'update any group_media:document entity'
+  47: 'update own group_media:document entity'
+  48: 'view group_media:document entity'
+  49: 'view unpublished group_media:document entity'
+  50: 'create group_media:document content'
+  51: 'view group_media:document content'
+  52: 'create group_media:image entity'
+  53: 'delete any group_media:image entity'
+  54: 'delete own group_media:image entity'
+  55: 'update any group_media:image entity'
+  56: 'update own group_media:image entity'
+  57: 'view group_media:image entity'
+  58: 'view unpublished group_media:image entity'
+  59: 'create group_media:image content'
+  60: 'view group_media:image content'
+  61: 'create group_media:video entity'
+  62: 'delete any group_media:video entity'
+  63: 'delete own group_media:video entity'
+  64: 'update any group_media:video entity'
+  65: 'update own group_media:video entity'
+  66: 'view group_media:video entity'
+  67: 'view unpublished group_media:video entity'
+  68: 'create group_media:video content'
+  69: 'view group_media:video content'
+  70: 'create group_node:page entity'
+  71: 'delete any group_node:page entity'
+  72: 'delete own group_node:page entity'
+  73: 'update any group_node:page entity'
+  74: 'update own group_node:page entity'
+  75: 'view group_node:page entity'
+  76: 'view unpublished group_node:page entity'
+  77: 'create group_node:page content'
+  78: 'view group_node:page content'
+  122: 'create group_node:event entity'
+  133: 'create group_node:news entity'
