--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -20,46 +20,49 @@ permissions:
   5: 'update own group_node:news entity'
   6: 'view group_node:news entity'
   7: 'view unpublished group_node:news entity'
-  11: 'view group_node:guide entity'
-  16: 'view group_node:information entity'
-  18: 'delete own group_node:event entity'
-  19: 'update any group_node:event entity'
-  20: 'update own group_node:event entity'
-  21: 'view group_node:event entity'
-  22: 'view unpublished group_node:event entity'
-  23: 'create group_node:notification entity'
-  24: 'delete own group_node:notification entity'
-  25: 'update any group_node:notification entity'
-  26: 'update own group_node:notification entity'
-  27: 'view group_node:notification entity'
-  28: 'view unpublished group_node:notification entity'
-  29: 'access group_media overview'
-  30: 'create group_media:audio entity'
-  31: 'delete own group_media:audio entity'
-  32: 'update any group_media:audio entity'
-  33: 'update own group_media:audio entity'
-  34: 'view group_media:audio entity'
-  35: 'view unpublished group_media:audio entity'
-  36: 'create group_media:document entity'
-  37: 'delete own group_media:document entity'
-  38: 'update any group_media:document entity'
-  39: 'update own group_media:document entity'
-  40: 'view group_media:document entity'
-  41: 'view unpublished group_media:document entity'
-  42: 'create group_media:image entity'
-  43: 'delete own group_media:image entity'
-  44: 'update any group_media:image entity'
-  45: 'update own group_media:image entity'
-  46: 'view group_media:image entity'
-  47: 'view unpublished group_media:image entity'
-  48: 'create group_media:video entity'
-  49: 'delete own group_media:video entity'
-  50: 'update any group_media:video entity'
-  51: 'update own group_media:video entity'
-  52: 'view group_media:video entity'
-  53: 'view unpublished group_media:video entity'
-  100: 'delete own group_node:page entity'
-  101: 'update any group_node:page entity'
-  102: 'update own group_node:page entity'
-  103: 'view group_node:page entity'
-  104: 'view unpublished group_node:page entity'
+  8: 'view group_node:guide entity'
+  9: 'view group_node:information entity'
+  10: 'delete own group_node:event entity'
+  11: 'update any group_node:event entity'
+  12: 'update own group_node:event entity'
+  13: 'view group_node:event entity'
+  14: 'view unpublished group_node:event entity'
+  15: 'create group_node:notification entity'
+  16: 'delete own group_node:notification entity'
+  17: 'update any group_node:notification entity'
+  18: 'update own group_node:notification entity'
+  19: 'view group_node:notification entity'
+  20: 'view unpublished group_node:notification entity'
+  21: 'access group_media overview'
+  22: 'create group_media:audio entity'
+  23: 'delete own group_media:audio entity'
+  24: 'update any group_media:audio entity'
+  25: 'update own group_media:audio entity'
+  26: 'view group_media:audio entity'
+  27: 'view unpublished group_media:audio entity'
+  28: 'create group_media:document entity'
+  29: 'delete own group_media:document entity'
+  30: 'update any group_media:document entity'
+  31: 'update own group_media:document entity'
+  32: 'view group_media:document entity'
+  33: 'view unpublished group_media:document entity'
+  34: 'create group_media:image entity'
+  35: 'delete own group_media:image entity'
+  36: 'update any group_media:image entity'
+  37: 'update own group_media:image entity'
+  38: 'view group_media:image entity'
+  39: 'view unpublished group_media:image entity'
+  40: 'create group_media:video entity'
+  41: 'delete own group_media:video entity'
+  42: 'update any group_media:video entity'
+  43: 'update own group_media:video entity'
+  44: 'view group_media:video entity'
+  45: 'view unpublished group_media:video entity'
+  46: 'delete own group_node:page entity'
+  47: 'update any group_node:page entity'
+  48: 'update own group_node:page entity'
+  49: 'view group_node:page entity'
+  50: 'view unpublished group_node:page entity'
+  79: 'create group_node:event entity'
+  87: 'create group_node:news entity'
+  99: 'create group_node:page entity'
