--- a/web/sites/default/config/core.entity_view_display.media.audio.thumbnail.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.thumbnail.yml
@@ -40,6 +40,7 @@ content:
             classes: {  }
 hidden:
   created: true
+  field_group: true
   field_media_in_library: true
   field_media_video_embed_field: true
   field_transcript: true
