POWR-795 remove featured image so that it can be added back as entity reference field

--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -5,18 +5,18 @@ dependencies:
   config:
     - core.entity_view_mode.node.featured
     - field.field.node.news.field_body
+    - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
-    - field.field.node.news.field_featured_image
+    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
+    - field.field.node.news.field_reviewer
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
-    - image.style.medium
     - node.type.news
   module:
     - ds
-    - image
     - panelizer
     - user
 third_party_settings:
@@ -68,22 +68,6 @@ targetEntityType: node
 bundle: news
 mode: featured
 content:
-  field_featured_image:
-    type: image
-    weight: 2
-    region: second
-    label: hidden
-    settings:
-      image_style: medium
-      image_link: content
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_summary:
     weight: 1
     label: hidden
