--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.field_body
+    - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
-    - field.field.node.news.field_featured_image
+    - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
+    - field.field.node.news.field_reviewer
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
@@ -168,7 +170,6 @@ hidden:
   field_body: true
   field_body_content: true
   field_feature_until: true
-  field_featured_image: true
   field_group: true
   field_legacy_path: true
   field_published_on: true
