POWR-714 - incremental commit as this story is being deferred. Not stable. I applied a patch that provides a groups context for behat tests, but haven't figured out the namespace for requiring it in behat.yml.

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -3,7 +3,7 @@ default:
     default:
       contexts:
         - FeatureContext
-        - GroupBehatContext # is this the correct namespace?
+        - Drupal\Group\GroupBehatContext # is this the correct namespace?
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
