POWR-776 add filter to event archive, clean up datetime formats

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -339,7 +339,7 @@ display:
           click_sort_column: value
           type: time_formatter
           settings:
-            time_format: 'h:i A'
+            time_format: 'g:i A'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -1165,6 +1165,48 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: title_op
+            label: 'Title contains'
+            description: ''
+            use_operator: false
+            operator: title_op
+            identifier: title
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: title
+          plugin_id: string
         field_start_date_value:
           id: field_start_date_value
           table: node__field_start_date
@@ -1172,26 +1214,29 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '<'
+          operator: between
           value:
-            min: ''
-            max: ''
+            min: '-30 days'
+            max: today
             value: today
             type: date
           group: 2
-          exposed: false
+          exposed: true
           expose:
-            operator_id: ''
-            label: ''
+            operator_id: field_start_date_value_op
+            label: 'Start date between'
             description: ''
             use_operator: false
-            operator: ''
-            identifier: ''
+            operator: field_start_date_value_op
+            identifier: field_start_date_value
             required: false
             remember: false
             multiple: false
             remember_roles:
               authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
