POWR-694 update permission to break lock, timeout lock at 3 days, clean up group content view

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -22,6 +22,7 @@ permissions:
   - 'access shortcuts'
   - 'access user profiles'
   - 'access video_browser entity browser pages'
+  - 'break content lock'
   - 'revert city_service revisions'
   - 'revert event revisions'
   - 'revert guide revisions'
