--- a/web/sites/default/config/views.view.locked_content.yml
+++ b/web/sites/default/config/views.view.locked_content.yml
@@ -8,6 +8,7 @@ dependencies:
     - content_lock
     - node
     - user
+    - views_bulk_operations
 _core:
   default_config_hash: EpNid4cXhaYpPFkwzH3JY10aW4JmZVxymgYAM0icUkY
 id: locked_content
@@ -135,6 +136,82 @@ display:
       row:
         type: fields
       fields:
+        views_bulk_operations_bulk_form:
+          id: views_bulk_operations_bulk_form
+          table: views
+          field: views_bulk_operations_bulk_form
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Views bulk operations'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          batch: true
+          batch_size: 10
+          form_step: true
+          buttons: false
+          clear_on_exposed: 0
+          action_title: Action
+          selected_actions:
+            'entity:break_lock:node': 'entity:break_lock:node'
+            'moderation_state_change:node': 0
+            node_unpromote_action: 0
+            node_unpublish_action: 0
+            node_publish_action: 0
+            node_unpublish_by_keyword_action: 0
+            node_assign_owner_action: 0
+            node_promote_action: 0
+            node_save_action: 0
+            node_make_sticky_action: 0
+            node_make_unsticky_action: 0
+            views_bulk_operations_delete_entity: 0
+            pathauto_update_alias: 0
+            'entity:save_action:node': 0
+            'entity:unpublish_action:node': 0
+            'entity:publish_action:node': 0
+            'entity:delete_action:node': 0
+          preconfiguration:
+            'entity:break_lock:node':
+              label_override: 'break lock'
+          plugin_id: views_bulk_operations_bulk_form
         title:
           id: title
           table: node_field_data
@@ -254,7 +331,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Lock Date/Time'
+          label: 'Locked since'
           exclude: false
           alter:
             alter_text: false
@@ -295,7 +372,7 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          date_format: fallback
+          date_format: 'raw time ago'
           custom_date_format: ''
           timezone: ''
           plugin_id: date
@@ -364,12 +441,6 @@ display:
           entity_type: user
           entity_field: name
           plugin_id: field
-        langcode:
-          id: langcode
-          table: content_lock
-          field: langcode
-          plugin_id: langcode
-          exclude: false
         operations:
           id: operations
           table: node
@@ -642,7 +713,7 @@ display:
         groups:
           1: AND
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
@@ -670,7 +741,7 @@ display:
         menu_name: admin
       enabled: true
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
