--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -24,6 +24,7 @@ module:
   contact: 0
   contact_storage: 0
   content_lock: 0
+  content_lock_timeout: 0
   content_moderation: 0
   contextual: 0
   copyright_block: 0
